# diskpp

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/acoustic_eigs/src/: acoustic_eigs.cpp
apps/diffusion/: CMakeLists.txt  diffusion_dg.cpp  diffusion_hho.cpp
apps/obstacle/: obstacle.cpp
apps/obstacle_mixed/: CMakeLists.txt
apps/obstacle_mixed/src/: Lagrange_basis.hpp  Lagrange_hho.hpp  gnuplot_output.hpp  membranes.cpp  membranes_Pk_Pk.cpp  obstacle_P2_P0.cpp  obstacle_Pk_Pk.cpp
apps/stokes/: CMakeLists.txt  rectangle1.geo2s  rectangle2.geo2s  rectangle3.geo2s  rectangle4.geo2s  rectangle5.geo2s  rectangle6.geo2s  rectangle7.geo2s  rectangle8.geo2s  rectangle9.geo2s  stokes_interface.cpp
apps/tests/: CMakeLists.txt
apps/unique_continuation/: CMakeLists.txt  heat_UC.cpp  heat_UC_finite_trace.cpp  test2d_1.geo  test2d_2.geo  test2d_3_5.geo  test2d_4.geo  wave_UC.cpp
apps/unique_continuation/gmsh_meshes/: test2d_1.geo  test2d_1_5.geo  test2d_1bound_1.geo  test2d_1bound_1_5.geo  test2d_1bound_2.geo  test2d_1bound_2_5.geo  test2d_1bound_3.geo  test2d_1bound_3_5.geo  test2d_1bound_4.geo  test2d_2.geo  test2d_2_5.geo  test2d_3.geo  test2d_3_5.geo  test2d_3bound_1.geo  test2d_3bound_1_5.geo  test2d_3bound_2.geo  test2d_3bound_2_5.geo  test2d_3bound_3.geo  test2d_3bound_3_5.geo  test2d_3bound_4.geo  test2d_4.geo  test2d_target_1_5.geo  test2d_target_2_5.geo  test2d_target_3.geo  test3d_1.geo
apps/unsteady_laplacian/: heat_dG.cpp
core/loaders/: gmsh_loader.hpp
core/mesh/: mesh.hpp
libdiskpp/: CMakeLists.txt
libdiskpp/include/diskpp/common/: timecounter.hpp
libdiskpp/include/diskpp/methods/: hho_assemblers.hpp
libdiskpp/include/diskpp/solvers/: direct_solvers.hpp  eigensolvers.hpp
libdiskpp/include/diskpp/solvers/eigensolvers/: feast.hpp  jacobi_davidson.hpp
unit_tests/: CMakeLists.txt  mumps.cpp  quad_raw_dunavant.cpp  quad_raw_gauss_lobatto.cpp  quad_raw_gm_triangles.cpp  quad_raw_tensorized_gl.cpp  quad_raw_tetra.cpp  quad_raw_triangle_gauss.cpp
