option(BUILD_APP_UC "Build unique continuation application" ON)
if (BUILD_APP_UC)

  configure_file(gmsh_meshes/test2d_1.geo gmsh_meshes/test2d_1.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1_5.geo gmsh_meshes/test2d_1_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_2.geo gmsh_meshes/test2d_2.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_2_5.geo gmsh_meshes/test2d_2_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3.geo gmsh_meshes/test2d_3.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3_5.geo gmsh_meshes/test2d_3_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_4.geo gmsh_meshes/test2d_4.geo COPYONLY)

  configure_file(gmsh_meshes/test2d_1bound_1.geo gmsh_meshes/test2d_1bound_1.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1bound_1_5.geo gmsh_meshes/test2d_1bound_1_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1bound_2.geo gmsh_meshes/test2d_1bound_2.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1bound_2_5.geo gmsh_meshes/test2d_1bound_2_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1bound_3.geo gmsh_meshes/test2d_1bound_3.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1bound_3_5.geo gmsh_meshes/test2d_1bound_3_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_1bound_4.geo gmsh_meshes/test2d_1bound_4.geo COPYONLY)

  configure_file(gmsh_meshes/test2d_3bound_1.geo gmsh_meshes/test2d_3bound_1.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3bound_1_5.geo gmsh_meshes/test2d_3bound_1_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3bound_2.geo gmsh_meshes/test2d_3bound_2.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3bound_2_5.geo gmsh_meshes/test2d_3bound_2_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3bound_3.geo gmsh_meshes/test2d_3bound_3.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3bound_3_5.geo gmsh_meshes/test2d_3bound_3_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_3bound_4.geo gmsh_meshes/test2d_3bound_4.geo COPYONLY)

  configure_file(gmsh_meshes/test2d_target_1.geo gmsh_meshes/test2d_target_1.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_target_1_5.geo gmsh_meshes/test2d_target_1_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_target_2.geo gmsh_meshes/test2d_target_2.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_target_2_5.geo gmsh_meshes/test2d_target_2_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_target_3.geo gmsh_meshes/test2d_target_3.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_target_3_5.geo gmsh_meshes/test2d_target_3_5.geo COPYONLY)
  configure_file(gmsh_meshes/test2d_target_4.geo gmsh_meshes/test2d_target_4.geo COPYONLY)

  configure_file(gmsh_meshes/test3d_1.geo gmsh_meshes/test3d_1.geo COPYONLY)

  add_executable(heat_UC heat_UC.cpp)
  target_link_libraries(heat_UC ${LINK_LIBS})
  add_executable(wave_UC wave_UC.cpp)
  target_link_libraries(wave_UC ${LINK_LIBS})
  add_executable(heat_UC_finite_trace heat_UC_finite_trace.cpp)
  target_link_libraries(heat_UC_finite_trace ${LINK_LIBS})
endif ()
